add result commiting to http server
