# docs/swagger.json
@@ -237,12 +237,12 @@
                 ],
                 "parameters": [
                     {
-                        "description": "Task duration",
+                        "description": "code params",
                         "name": "duration",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/types.PostTaskObjectHandlerRequest"
                         }
                     },
                     {
@@ -295,6 +295,17 @@
             "type": "object",
             "properties": {
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.PostTaskObjectHandlerRequest": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "translator": {
                     "type": "string"
                 }
             }
